--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,16 +4,16 @@
 body {
 
     font-family: Tahoma;
-    
-
-    width: 100%;
+    margin: 0px;
     min-width: 280px;
     max-width: 800px;
+    margin: auto;
+    
 }
 
 div.cabecalho {
     text-align: center;
-    background-color: rgb(9, 255, 255);
+    background-color: #afddfb;
     padding: 5px;
     margin: 5px 5px 5px 5px;
     width: 100%;
