--- a/estilo/style.css
+++ b/estilo/style.css
@@ -66,7 +66,9 @@ div.servicos {
     color: white;
     padding: 15px;
     margin:  30px;
-    width: 700px;
+    min-width: 280px;
+    max-width: 800px;
+    margin: auto;
 }
 
 div.servicos > p {
