--- a/estilo/style.css
+++ b/estilo/style.css
@@ -16,9 +16,9 @@ div.cabecalho {
     background-color: #afddfb;
     padding: 5px;
     margin: 5px 5px 5px 5px;
-    width: 100%;
     min-width: 280px;
     max-width: 800px;
+    margin: auto;
 }
 
 p > a {
@@ -64,8 +64,6 @@ div.servicos {
     text-align: center;
     background-color: #1d80c1;
     color: white;
-    padding: 15px;
-    margin:  30px;
     min-width: 280px;
     max-width: 800px;
     margin: auto;
@@ -84,7 +82,9 @@ div.servicos > ul {
     margin: 40px auto 5px auto;
     line-height: 35px;
     font-size: 18px;
-    
+    min-width: 280px;
+    max-width: 800px;
+    margin: auto;
 }
 strong.servicos1 {
     color: #fff81b;
@@ -118,9 +118,9 @@ div.contato {
     background-color: #1d80c1 ;
     color: white;
     padding: 10px;
-    width: 100%;
     min-width: 280px;
     max-width: 800px;
+    margin: auto;
 }
 
 div.contato > p.black {
