--- a/estilo/style.css
+++ b/estilo/style.css
@@ -126,9 +126,10 @@ div.contato {
 div.contato > p.black {
 
     background-color: black;
-    margin-left: 114px;
-    margin-right: 148px;
-    padding: 5px;
+    min-width: 280px;
+    max-width: 800px;
+    margin: 10px auto auto auto; 
+    padding: 10px;
 }
 div.contato p > strong {
 
